[package]
authors = ["zslayton <zack.slayton@gmail.com"]
description = "A full STOMP 1.2 client implementation. Allows programs to interact with message queueing services like ActiveMQ and RabbitMQ."
keywords = ["stomp", "mq", "activemq", "rabbitmq", "queue"]
license = "MIT"
name = "stomp"
readme = "README.md"
repository = "https://github.com/zslayton/stomp-rs"
version = "0.11.0"

[dependencies]
lifeguard = "0.3"
log = "0.3"
mio = "0.5.1"
unicode-segmentation = "0.1"

[lib]
name = "stomp"
